--- a/style/style.css
+++ b/style/style.css
@@ -97,7 +97,7 @@ body {
   justify-content: end;
   width: 50px;
   height: 50px;
-  background-image: url("./images/cross.png");
+  background-image: url("images/cross.png");
   background-size: 50px 50px;
   background-repeat: no-repeat;
 }
